--- a/kenzie-swinford-education.html
+++ b/kenzie-swinford-education.html
@@ -179,7 +179,7 @@
 
 	<section id = "future">
 		<h3>Future</h3>
-		<p>After graduating from MSOE, my current plan is grad school. I'm not quite sure whether I want to pursue a Master's Degree or a PhD. If I decide that grad school is not for me, I will hopefully find a job in either the automobile industry or robotics.</p>
+		<p>After graduating from MSOE, my current plan is grad school. I'm not quite sure whether I want to pursue a Master's Degree or a PhD. If I decide that grad school is not for me, I will hopefully find a job in either the automotive industry or robotics.</p>
 	</section>
 
 	<footer>
