--- a/kenzie-swinford.html
+++ b/kenzie-swinford.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<header>
+	<header id = "top">
 		<h1>Kenzie Swinford</h1>
 		<nav>
 			<a href = "kenzie-swinford.html">Home</a>
