--- a/kenzie-swinford.html
+++ b/kenzie-swinford.html
@@ -23,7 +23,7 @@
 
 	<section id = "about">
 		<figure>
-			<img src = "kenzie-swinford-image.jpg" alt = "Kenzie Swinford" width = "10%">
+			<img src = "kenzie-swinford-image-removebg.png" alt = "Kenzie Swinford" width = "10%">
 		</figure>
 		<p>Hi all! I created this website during the COVID-19 pandemic because my summer internship was cancelled and I wanted a project to work on. Prior to creating this website I had zero web design experience and was learning HTML through Coursera. I am using this page to apply what I am learning, and chose myself as the topic because it is what I know the most about. I am a first generation college student studying mechanical engineering and computer science at the Milwaukee School of Engineering. In my spare time I enjoy learning about engineering and applying the knowledge I have already gathered. I also enjoy art and even started my own Etsy and Redbubble shops during the pandemic. One cause I am passionate about is STEM outreach. I did not have much exposure to the opportunities offered by STEM careers when I was a child, so I hope to be a STEM mentor and role model for other kids. Feel free to explore this page to learn more about me! This page is a work in progress and by no means perfect because I am still learning. With that said, I am very open to constructive criticism. If you find a bug or have any other suggestions to make the site better, please reach out! Thank you!
 	</section>
