--- a/kenzie-swinford-stem-outreach.html
+++ b/kenzie-swinford-stem-outreach.html
@@ -43,7 +43,7 @@
 	</section>
 
 	<section id = "brite">
-		<h3>Brite</h3>
+		<h3>Brite Summer Program</h3>
 		<p>Over the summer of 2020 I participated in a three week program by Brite and 
 		<a href = "https://www.worldscienceu.com">World Science U</a>
 		that was designed to introduce middle school and high school girls to possible STEM careers. I helped the girls navigate the course, facilitated group discussions over Zoom, and answered their questions. Each week of the program had its own theme: Art x Science, Danger!, and Mind Matters.</p>
