--- a/kenzie-swinford-steam-outreach.html
+++ b/kenzie-swinford-steam-outreach.html
@@ -54,7 +54,7 @@
 	<section id = "stem-superiority-complex">
 		<h3>Shutting Down the STEM Superiority Complex</h3>
 		<p>I do not believe that STEM is more important than the humanities, nor do I believe that the humanities are more important than STEM. I simply believe that both are equally important and necessary. The opinions provided below are soley my own that I have come up with based on my experiences with both STEM and the humanities, talking to other poeple in both fields, and listening to others speak on the issue. Feel free to read about my opinions if you wish, but do not use them as reason for argument. Instead, use them as inspiration for your own research about the STEM superiority complex. This list may contain more about how the humanities are related to STEM because my career falls into the STEM category and I therefore know more about it. If you would like to chat about this issue or provide your own insight, feel free to reach out.</p>
-		<p>Please <a href = "mailto:swinfordkenzie@gmail.com?subject=STEM%20Superiority%20Complex">eamil me</a> if you would like to discuss this issue further.
+		<p>Please <a href = "mailto:swinfordkenzie@gmail.com?subject=STEM%20Superiority%20Complex">email me</a> if you would like to discuss this issue further.
 		<details>
 			<summary>My Opinions</summary>
 			<p>This list is not exhaustive of my beliefs. When I have time, I hope to include links to other websites that further explains each belief. If you would like to provide your own ideas, please contact me. All ideas are my own unless otherwise noted. My ideas should not be used as arguments or proof, and should instead be used as inspiration for your own research.</p>
