--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
 		<figure>
 			<img src = "images/kenzie-swinford-image-removebg.png" alt = "Kenzie Swinford">
 		</figure>
+		<p>Please ignore this line. Testing</p>
 		<p>I created this website during the COVID-19 pandemic becasue my summer internship was cancelled and I wanted a project to work on. Prior to creating this website I had zero web design experience and was learning HTML through Coursera. I am using this page to apply what I learn through these courses.<br><br></p>
 		<p>I am a first generation college student studying mechanical engineering and computer science at the Milwaukee School of Engineering. In my spare time I enjoy creating mini engineering projects and practicing my art. One cause I am passionate about is STEM outreach. I did not have much exposure to the opportunities offered by a STEM career when I was a child, so I hope to be a STEM mentor and role model for other kids.<br><br></p>
 		<p>Feel free to explore this page to learn more about me! This page is a work in progress and by no means perfect. With that said, I am very open to constructive criticism. If you find an issue, error, or have any other suggestions to make the site better, please reach out!</p>
