--- a/home.html
+++ b/home.html
@@ -40,7 +40,8 @@
 			One cause I am passionate about is STEM outreach. I did not have much exposure to the opportunities offered by a STEM career when I was a child, 
 			so I hope to be a STEM mentor and role model for other kids.<br><br></p>
 		<p>Feel free to explore this page to learn more about me! This page is a work in progress and by no means perfect. 
-			With that said, I am very open to constructive criticism. If you find an issue, error, or have any other suggestions to make the site better, please reach out!</p>
+			With that said, I am very open to constructive criticism. If you find an issue, error, 
+			or have any other suggestions to make the site better, please reach out!</p>
 	</section>
 
 	<footer>
