--- a/stem-outreach.html
+++ b/stem-outreach.html
@@ -35,35 +35,84 @@
 		<nav>
 			<a href = "#overview">Overview</a>
 			<a href = "#msoe-stem-programming">MSOE STEM Programming</a>
+			<a href = "#lunabotics-outreach">NASA RMC Lunabotics Outreach</a>
 			<a href = "#brite">Brite</a>
 			<a href = "#boys-girls-club">Boys &amp; Girls Club</a>
-			<a href = "#stem-complex">STEM Superiority Complex</a>
 		</nav>
 	</section>
 
 	<section class = "has-internal-nav" id = "overview">
 		<h4>Overview</h4>
-		<p>Growing up, I did not learn much about the opportunities offered by STEM careers, but I do not consider that to be bad. It allowed me to explore many different career interests such as art, architecture, automotives, and automotive painting. Before deciding on mechanical engineering, I wanted to be an automotive shop owner/painter, an artist, a theater set designer, and an architect, and I do not regret those experiences at all. However, I do also understand the importance of giving children access to information on STEM careers so that they have the time to explore and decide for themselves whether or not it would be a good fit. Becasue of my own background and interests, I have developed a passion for introducing STEM to pre-college students, while also helping them keep an open mind about other non-STEM careers. Over the last couple of years I have worked a couple of jobs related to childcare and outreach, and have been working to improve my mentorship to become a better role model for the students I am working with.</p>
+		<p>
+			Growing up, I did not learn much about the opportunities offered by STEM careers, 
+			but I do not consider that to be bad. It allowed me to explore many different 
+			career interests such as art, architecture, automotives, and automotive painting. 
+			Before deciding on mechanical engineering, I wanted to be an automotive shop 
+			owner/painter, an artist, a theater set designer, and an architect, and I do not 
+			regret those experiences at all. However, I do also understand the importance of 
+			giving children access to information on STEM careers so that they have the time 
+			to explore and decide for themselves whether or not it would be a good fit. 
+			Becasue of my own background and interests, I have developed a passion for 
+			introducing STEM to pre-college students, while also helping them keep an open 
+			mind about other non-STEM careers. Over the last couple of years I have worked 
+			many jobs related to childcare and outreach, and have been working to improve 
+			my mentorship to become a better role model for the students I am working with.
+		</p>
 	</section>
 
 	<section class = "has-internal-nav" id = "msoe-stem-programming">
 		<h4><a href = "https://www.msoe.edu/academics/stem-community-programs">MSOE STEM Programming</a></h4>
-		<p>Since September 2019 I have worked for MSOE's STEM Outreach Department as a STEM Program Assistant. My job includes testing program kits, assembling program kits, and assisting during the actual programs. My favorite part of the job is being able to answer students' questions about my experiences as an engineering major.</p>
+		<p>
+			Since September 2019 I have worked for MSOE's STEM Outreach Department as a STEM 
+			Program Assistant. My job includes testing program kits, assembling program kits, 
+			and assisting during the actual programs. My favorite part of the job is being 
+			able to answer students' questions about my experiences as an engineering major. 
+			Currently, I am working on creating a Google Slides presentation to teach the 
+			basics of Arduino by providing basic hardware and coding concepts, example 
+			problems, and application problems. The presentation covers turning on an LED,
+			blinking an LED, turning on and dimming an RGB LED, using a piezoelectric buzzer, 
+			using a potentiometer, using the Serial Monitor in Arduino IDE, contorlling 
+			hardware with a potentiometer, using servo motors, and controlling a servo motor
+			with a potentiometer.
+		</p>
+	</section>
+
+	<section class = "has-internal-nav" id = "lunabotics-outreach">
+		<h4>NASA RMC Lunaboitics Outreach</h4>
+		<p>
+			I am a member of the MSOE NASA RMC Lunabotics organziation, and part of our 
+			requirements for NASA in order to compete in the spring is to for our organziation
+			to do STEM Outreach. I joined the STEM Outreah Committee in the fall of 2020, and 
+			we are working on putting together STEM programs for elementary and middle school
+			children. I am working to put together a program to teach elementary students about
+			UV light, why NASA cares about UV light, and the dangers of UV light through a 
+			video and PowerPoint presentation, and a hands on activity. 
+		</p>
 	</section>
 
 	<section class = "has-internal-nav" id = "brite">
 		<h4>Brite Online Summer Program</h4>
-		<p>During the summer of 2020 I participated in a three week program run by Brite and <a href = "https://www.worldscienceu.com">World Science U</a> that was designed to introduce middle school and high school girls to possible STEM careers. I worked as an Educator Assistant by helping the girls navigate the course, facilitating group discussions over Zoom, and answering questions. Each week of the program had its own theme: Art x Science, Danger!, and Mind Matters. During Art x Science, they learned about the intersection of art and science and heard from women currently working in both industries. Druing Danger!, the girls learned about dangerous jobs within STEM, and during Mind Matters they learned about careers realted to the brain and the mind.</p>
+		<p>
+			During the summer of 2020 I participated in a three week program run by Brite and 
+			<a href = "https://www.worldscienceu.com">World Science U</a> that was designed to 
+			introduce middle school and high school girls to possible STEM careers. I worked  
+			as an Educator Assistant by helping the girls navigate the course, facilitating 
+			group discussions over Zoom, and answering questions. Each week of the program 
+			had its own theme: Art x Science, Danger!, and Mind Matters. During Art x 
+			Science, they learned about the intersection of art and science and heard from 
+			women currently working in both industries. Druing Danger!, the girls learned 
+			about dangerous jobs within STEM, and during Mind Matters they learned about 
+			careers realted to the brain and the mind.
+		</p>
 	</section>
 
 	<section class = "has-internal-nav" id = "boys-girls-club">
 		<h4><a href = "https://www.bgclubpc.org/">Boys &amp; Girls Club</a></h4>
-		<p>Over the summer of 2019 I worked as a Program Leader for the Boys &amp; Girls Club of Portage County. I led elementary school children through STEM, Arts &amp; Crafts, Cooking, and Reading programs.</p>
-	</section>
-
-	<section class = "has-internal-nav bottom" id = "stem-complex">
-		<h4>STEM Superiority Complex</h4>
-		<p>One aspect of the STEM community that I am trying to work on is the idea that STEM careers are superior to all other careers, especially those within humanities. I believe that the idea of STEM being superior is damaging to society. I am working to break down this superiority complex by checking myself and my thoughts to make sure that I am not thinking negatively about non-STEM majors. I am also making sure that when I talk with children about possible career opportunities that I do not speak down on non-STEM paths and provide positive thoughts on other careers that may come up. Additionally, I am trying to speak up when I hear my peers talking negatively about non-STEM careers.</p>
+		<p>
+			Over the summer of 2019 I worked as a Program Leader for the Boys &amp; Girls 
+			Club of Portage County. I led elementary school children through STEM, Arts 
+			&amp; Crafts, Cooking, and Reading programs.
+		</p>
 	</section>
 
 	<footer>
