fixed bottom section in outreach

--- a/stem-outreach.html
+++ b/stem-outreach.html
@@ -106,7 +106,7 @@
 		</p>
 	</section>
 
-	<section class = "has-internal-nav" id = "boys-girls-club">
+	<section class = "has-internal-nav bottom" id = "boys-girls-club">
 		<h4><a href = "https://www.bgclubpc.org/">Boys &amp; Girls Club</a></h4>
 		<p>
 			Over the summer of 2019 I worked as a Program Leader for the Boys &amp; Girls 
