added footer to connect

--- a/connect.html
+++ b/connect.html
@@ -32,9 +32,23 @@
 
 	<section class = "no-internal-nav bottom">
 		<h4>I would love to connect with you!</h4>
-		<p>If you would like, feel free to connect with me using any of the links! I also welcome constructive criticsm about my site so please shoot me an email or message with any suggestions.</p>
+		<p>If you would like, feel free to connect with me using any of the links! 
+			I also welcome constructive criticsm about my site so please shoot me 
+			an email or message with any suggestions.</p>
 		<a class = "icon" href = "mailto:swinfordkenzie@gmail.com?subject=About%20Website" aria-label = "Email"><i class = "fa fa-envelope fa-3x"></i></a>
 		<a class = "icon" href = "https://www.linkedin.com/in/kenzie-swinford" aria-label = "LinkedIn"><i class = "fa fa-linkedin fa-3x"></i></a>
 		<a class = "icon" href = "https://www.facebook.com/kenzie.swinford" aria-label = "Facebook"><i class = "fa fa-facebook-square fa-3x"></i></a>
 		<a class = "icon" href = "https://www.instagram.com/kenzieswinford" aria-label = "Instagram"><i class = "fa fa-instagram fa-3x"></i></a>
 	</section> 
+
+	<footer>
+		<p>Kenzie Swinford
+			<a href = "https://www.linkedin.com/in/kenzie-swinford" aria-label = "LinkedIn"><i class = "fa fa-linkedin fa-xs"></i></a>
+			<a href = "https://www.github.com/ken-zie" aria-label = "Github"><i class = "fa fa-github fa-xs"></i></a>
+			<a href = "#top">Back to Top</a>
+		</p>
+	</footer>
+
+</body>
+
+</html>
