--- a/stem-outreach.html
+++ b/stem-outreach.html
@@ -31,7 +31,7 @@
 	</section>
 
 	<section class = "internal-nav">
-		<h3><a href = "stem.html">STEM Oureach</a></h3>
+		<h3><a href = "stem.html">STEM Outreach</a></h3>
 		<nav>
 			<a href = "#overview">Overview</a>
 			<a href = "#msoe-stem-programming">MSOE STEM Programming</a>
