changed link name

--- a/stem-outreach.html
+++ b/stem-outreach.html
@@ -36,7 +36,7 @@
 			<a href = "#overview">Overview</a>
 			<a href = "#msoe-stem-programming">MSOE STEM Programming</a>
 			<a href = "#lunabotics-outreach">NASA RMC Lunabotics Outreach</a>
-			<a href = "#brite">Brite</a>
+			<a href = "#brite">Brite Online Summer Program</a>
 			<a href = "#boys-girls-club">Boys &amp; Girls Club</a>
 		</nav>
 	</section>
