edited picture position

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 		</nav>
 	</header>
 
-	<section class = "no-internal-nav bottom top">
+	<section class = "no-internal-nav bottom top" id = "intro">
 		<h2>About</h2>
 		<figure>
 			<img src = "images/kenzie-swinford-image-removebg.png" alt = "Kenzie Swinford">
