took out drop down menu

--- a/education.html
+++ b/education.html
@@ -1,202 +1,204 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 
 <head>
-	<meta charset = "UTF-8">
+	<meta charset="UTF-8">
 	<title>Education</title>
-	<script src = "https://use.fontawesome.com/6baa9c78e6.js"></script>
-	<link rel = "icon" type = "image/png" href = "images/kenzie-swinford-favicon.png"/>
-	<link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Barlow|Electrolize">
-	<link rel = "stylesheet" href = "css/kenzie-swinford-default.css">
-	<link rel = "stylesheet" href = "css/kenzie-swinford-style.css">
+	<script src="https://use.fontawesome.com/6baa9c78e6.js"></script>
+	<link rel="icon" type="image/png" href="images/kenzie-swinford-favicon.png" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow|Electrolize">
+	<link rel="stylesheet" href="css/kenzie-swinford-default.css">
+	<link rel="stylesheet" href="css/kenzie-swinford-style.css">
 </head>
 
 <body>
 	<header>
 		<h1>
-			<a href = "home.html">Kenzie <mark>Swinford</mark></a>
+			<a href="home.html">Kenzie <mark>Swinford</mark></a>
 		</h1>
-		<nav> 
-			<a class = "current" href = "education.html">Education</a>
-			<a href = "engineering.html">Engineering</a>
-			<a href = "art.html">Art</a>
-			<a href = "stem-outreach.html">Outreach</a>
-			<a href = "connect.html">Connect</a>
+		<nav>
+			<a class="current" href="education.html">Education</a>
+			<a href="engineering.html">Engineering</a>
+			<a href="art.html">Art</a>
+			<a href="stem-outreach.html">Outreach</a>
+			<a href="connect.html">Connect</a>
 		</nav>
 	</header>
 
-	<section class = "internal-head top">
+	<section class="internal-head top">
 		<h2>Education</h2>
 	</section>
 
-	<section class = "internal-nav">
-		<h3><a href = "education.html">Education</a></h3>
+	<section class="internal-nav">
+		<h3><a href="education.html">Education</a></h3>
 		<nav>
-			<a href = "#college">College</a>
-			<a href = "#high-school">High School</a>
-			<a href = "#online">Online</a>
+			<a href="#college">College</a>
+			<a href="#high-school">High School</a>
+			<a href="#online">Online</a>
 		</nav>
 	</section>
 
-	<section class = "has-internal-nav" id = "college">
-		<h4><a href = "https://www.msoe.edu">Milwaukee School of Engineering</a></h4>
-		<details>
-			<summary>Academic Record</summary>
-			<ul>
-				<li><a href = "https://www.msoe.edu/academics/undergraduate-degrees/engineering/mechanical-engineering/">B.S. Mechanical Engineering</a>
-					<ul>
-						<li>GPA: 4.00</li>
-					</ul>
-				</li>
-				<li><a href = "https://msoe.edu/academics/undergraduate-degrees/engineering/computer-science">B.S. Computer Science</a>
-					<ul>
-						<li>GPA: 4.00</li>
-					</ul>
-				</li>
-				<li>Overall GPA: 4.00</li>
-			</ul>
-		</details>
-		<details>
-			<summary>Academic Honors</summary>
-			<ul>
-				<li>Dean's List with High Honors
-					<ul>
-						<li><a href = "https://msoe.edu/about-msoe/news/details/msoe-dean-s-and-honors-lists-winter-2020">Winter 2019-2020</a></li>
-						<li><a href = "https://msoe.edu/about-msoe/news/details/msoe-dean-s-list-spring-2020">Spring 2019-2020</a></li>
-					</ul>
-				</li>
-				<li>Honors
-					<ul>
-						<li><a href = "https://msoe.edu/about-msoe/news/details/msoe-dean-s-and-honors-lists-fall-2019">Fall 2019-2020</a></li>
-					</ul>
-				</li>
-			</ul>
-		</details>
-		<details>
-			<summary>Extracurricular Activities</summary>
-			<ul>
-				<li><a href = "https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html">MSOE NASA Robotic Mining Competition: Lunabotics</a>
-					<ul>
-						<li>2020-2021 Secretary</li>
-					</ul>
-				</li>
-				<li><a href = "https://www.aiaa.org/">MSOE American Institute of Aeronautics and Astronautics</a>
-					<ul>
-						<li>2020-2021 Treasurer</li>
-					</ul>
-				</li>
-				<li><a href = "https://formula-hybrid.org/">MSOE SAE Formula Hybrid</a></li>
-				<li><a href = "https://www.asme.org/">MSOE American Society of Mechanical Engineers</a></li>
-			</ul>
-		</details>
-		<details>
-			<summary>University Scholars Honors Program</summary>
-			<p>I was chosen to participate in MSOE's <a href = "https://www.msoe.edu/admissions-aid/undergraduate-admissions/freshman-honors-program/">University Scholars Honors Program</a> my freshman year. Through this program I worked on a project which aimed at bringing attention and recognition to the underground railroad in Milwaukee. We worked to get this project going by conducting research about the underground railroad, brainstorming ideas for a memorial, and creating the <a href = "https://sites.google.com/view/mke-underground-railroad/home">MKE Underground Railroad Project</a> website.</p>
-		</details>
+	<section class="has-internal-nav" id="college">
+		<h4><a href="https://www.msoe.edu">Milwaukee School of Engineering</a></h4>
+		<h5>Academic Record</h5>
+		<ul>
+			<li><a href="https://www.msoe.edu/academics/undergraduate-degrees/engineering/mechanical-engineering/">B.S.
+					Mechanical Engineering</a>
+				<ul>
+					<li>GPA: 4.00</li>
+				</ul>
+			</li>
+			<li><a href="https://msoe.edu/academics/undergraduate-degrees/engineering/computer-science">B.S.
+					Computer Science</a>
+				<ul>
+					<li>GPA: 4.00</li>
+				</ul>
+			</li>
+			<li>Overall GPA: 4.00</li>
+		</ul>
+		<h5>Academic Honors</h5>
+		<ul>
+			<li>Dean's List with High Honors
+				<ul>
+					<li><a href="https://msoe.edu/about-msoe/news/details/msoe-dean-s-and-honors-lists-winter-2020">Winter
+							2019-2020</a></li>
+					<li><a href="https://msoe.edu/about-msoe/news/details/msoe-dean-s-list-spring-2020">Spring
+							2019-2020</a></li>
+				</ul>
+			</li>
+			<li>Honors
+				<ul>
+					<li><a href="https://msoe.edu/about-msoe/news/details/msoe-dean-s-and-honors-lists-fall-2019">Fall
+							2019-2020</a></li>
+				</ul>
+			</li>
+		</ul>
+		<h5>Extracurricular Activities</h5>
+		<ul>
+			<li><a href="https://www.nasa.gov/offices/education/centers/kennedy/technology/nasarmc.html">MSOE NASA
+					Robotic Mining Competition: Lunabotics</a>
+				<ul>
+					<li>2020-2021 Secretary</li>
+				</ul>
+			</li>
+			<li><a href="https://www.aiaa.org/">MSOE American Institute of Aeronautics and Astronautics</a>
+				<ul>
+					<li>2020-2021 Treasurer</li>
+				</ul>
+			</li>
+			<li><a href="https://formula-hybrid.org/">MSOE SAE Formula Hybrid</a></li>
+			<li><a href="https://www.asme.org/">MSOE American Society of Mechanical Engineers</a></li>
+		</ul>
+		<h5>University Scholars Honors Program</h5>>
+		<p>I was chosen to participate in MSOE's <a
+				href="https://www.msoe.edu/admissions-aid/undergraduate-admissions/freshman-honors-program/">University
+				Scholars Honors Program</a> my freshman year. Through this program I worked on a project which aimed
+			at bringing attention and recognition to the underground railroad in Milwaukee. We worked to get this
+			project going by conducting research about the underground railroad, brainstorming ideas for a memorial,
+			and creating the <a href="https://sites.google.com/view/mke-underground-railroad/home">MKE Underground
+				Railroad Project</a> website.</p>
 	</section>
 
-	<section class = "has-internal-nav" id = "high-school">
-		<h4><a href = "https://www.pointschools.net/spash">Stevens Point Area Senior High</a></h4>
-		<details>
-			<summary>Academic Record</summary>
-			<ul>
-				<li>Unweighted GPA: 4.00</li>
-				<li>ACT Composite: 34</li>
-				<li>SAT Chemistry: 700</li>
-			</ul>
-		</details>
-		<details>
-			<summary>Academic Awards</summary>
-			<ul>
-				<li>Valedictorian</li>
-				<li><a href = "http://heab.state.wi.us/faq/aes.html">Wisconsin State Academic Excellence Scholar</a></li>
-				<li><a href = "https://www2.ed.gov/programs/presedaward/eligibility.html">President's Award for Educational Excellence</a></li>
-				<li><a href = "https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award">AP Scholar with Distinction</a></li>
-				<li>Stevens Point Area Senior High Academic Excellence Award</li>
-				<li>Stevens Point Area Education Association Award</li>
-			</ul>
-		</details>
-		<details>
-			<summary>Extracurricular Activities</summary>
-			<ul>
-				<li>Sports
-					<ul>
-						<li>Varsity Rugby
-							<ul>
-								<li>Captain</li>
-							</ul>
-						</li>
-						<li>JV2 Softball</li>
-						<li>JV2 Volleyball
-							<ul>
-								<li>Athletic Achievement Award</li>
-							</ul>
-						</li>
-						<li><a href = "https://www.pwya.org/softball">PWYA Fastpitch Softball</a>
-							<ul>
-								<li>All Star</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li>Arts
-					<ul>
-						<li>Drawing and Painting
-							<ul>
-								<li>First Place Earth Day Poster Contest</li>
-								<li>Riverfront Arts Center Art Achievement Award</li>
-								<li>Riverfront Arts Center Award of Excellence</li>
-							</ul>
-						</li>
-						<li><a href = "https://www.whsfa.org/">Wisconsin High School Forensics Association</a>
-							<ul>
-								<li>Bronze at State x3</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-				<li>STEM
-					<ul>
-						<li><a href = "https://www.createportagecounty.org/">CREATE Portage County SumoBots</a></li>
-						<li><a href = "https://www.skillsusa.org/">Skills USA Related Technical Math</a>
-							<ul>
-								<li>Regional Gold Medal</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
-		</details>
+	<section class="has-internal-nav" id="high-school">
+		<h4><a href="https://www.pointschools.net/spash">Stevens Point Area Senior High</a></h4>
+		<h5>Academic Record</h5>
+		<ul>
+			<li>Unweighted GPA: 4.00</li>
+			<li>ACT Composite: 34</li>
+			<li>SAT Chemistry: 700</li>
+		</ul>
+		<h5>Academic Awards</h5>
+		<ul>
+			<li>Valedictorian</li>
+			<li><a href="http://heab.state.wi.us/faq/aes.html">Wisconsin State Academic Excellence Scholar</a></li>
+			<li><a href="https://www2.ed.gov/programs/presedaward/eligibility.html">President's Award for Educational
+					Excellence</a></li>
+			<li><a href="https://apstudents.collegeboard.org/awards-recognitions/ap-scholar-award">AP Scholar with
+					Distinction</a></li>
+			<li>Stevens Point Area Senior High Academic Excellence Award</li>
+			<li>Stevens Point Area Education Association Award</li>
+		</ul>
+		<h5>Extracurricular Activites</h5>
+		<ul>
+			<li>Sports
+				<ul>
+					<li>Varsity Rugby
+						<ul>
+							<li>Captain</li>
+						</ul>
+					</li>
+					<li>JV2 Softball</li>
+					<li>JV2 Volleyball
+						<ul>
+							<li>Athletic Achievement Award</li>
+						</ul>
+					</li>
+					<li><a href="https://www.pwya.org/softball">PWYA Fastpitch Softball</a>
+						<ul>
+							<li>All Star</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li>Arts
+				<ul>
+					<li>Drawing and Painting
+						<ul>
+							<li>First Place Earth Day Poster Contest</li>
+							<li>Riverfront Arts Center Art Achievement Award</li>
+							<li>Riverfront Arts Center Award of Excellence</li>
+						</ul>
+					</li>
+					<li><a href="https://www.whsfa.org/">Wisconsin High School Forensics Association</a>
+						<ul>
+							<li>Bronze at State x3</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li>STEM
+				<ul>
+					<li><a href="https://www.createportagecounty.org/">CREATE Portage County SumoBots</a></li>
+					<li><a href="https://www.skillsusa.org/">Skills USA Related Technical Math</a>
+						<ul>
+							<li>Regional Gold Medal</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+		</ul>
 	</section>
 
-	<section class = "has-internal-nav" id = "online">
-		<h4><a href = "https://www.edx.org">edX</a></h4>
-		<details>
-			<summary>edX Certificates</summary>
-			<ul>
-				<li><a href = "https://courses.edx.org/certificates/d4fb9459e991435f8ba73c7ca6bf7ab0">Introduction to Aerospace Engineering: Astronautics and Human Spaceflight</a></li>
-				<li><a href = "https://courses.edx.org/certificates/a2e409fb127e403d8a24e0e8816c8b29">Research Methods: An Engineering Approach</a></li>					
-				<li><a href = "https://courses.edx.org/certificates/7608343822d64dd4b7f295b0fe09a667">Introduction to C++</a></li>
-				<li><a href = "https://courses.edx.org/certificates/2c395d93bf6844e8bd24649625983ecd">Learn to Program in Java</a></li>
-			</ul>
-		</details>
+	<section class="has-internal-nav" id="online">
+		<h4><a href="https://www.edx.org">edX</a></h4>
+		<ul>
+			<li><a href="https://courses.edx.org/certificates/d4fb9459e991435f8ba73c7ca6bf7ab0">Introduction to
+					Aerospace Engineering: Astronautics and Human Spaceflight</a></li>
+			<li><a href="https://courses.edx.org/certificates/a2e409fb127e403d8a24e0e8816c8b29">Research Methods: An
+					Engineering Approach</a></li>
+			<li><a href="https://courses.edx.org/certificates/7608343822d64dd4b7f295b0fe09a667">Introduction to C++</a>
+			</li>
+			<li><a href="https://courses.edx.org/certificates/2c395d93bf6844e8bd24649625983ecd">Learn to Program in
+					Java</a></li>
+		</ul>
 	</section>
 
-	<section class = "has-internal-nav bottom">
-		<h4><a href = "https://www.coursera.org">Coursera</a></h4>
-		<details>
-			<summary>Coursera Certificates</summary>
-			<ul>
-				<li><a href = "https://www.coursera.org/account/accomplishments/records/NLEWC2HXEUPE">Introduction to HTML5</a></li>
-			</ul>
-		</details>
+	<section class="has-internal-nav bottom">
+		<h4><a href="https://www.coursera.org">Coursera</a></h4>
+		<ul>
+			<li><a href="https://www.coursera.org/account/accomplishments/records/NLEWC2HXEUPE">Introduction to
+					HTML5</a></li>
+			<li><a href="https://www.coursera.org/account/accomplishments/certificate/LMGY3STZ4APA">Introduction to
+					CSS3</a></li>
+		</ul>
 	</section>
 
 	<footer>
 		<p>Kenzie Swinford
-			<a href = "https://www.linkedin.com/in/kenzie-swinford" aria-label = "LinkedIn"><i class = "fa fa-linkedin fa-xs"></i></a>
-			<a href = "https://www.github.com/ken-zie" aria-label = "Github"><i class = "fa fa-github fa-xs"></i></a>
-			<a href = "#top">Back to Top</a>
+			<a href="https://www.linkedin.com/in/kenzie-swinford" aria-label="LinkedIn"><i
+					class="fa fa-linkedin fa-xs"></i></a>
+			<a href="https://www.github.com/ken-zie" aria-label="Github"><i class="fa fa-github fa-xs"></i></a>
+			<a href="#top">Back to Top</a>
 		</p>
 	</footer>
 </body>
